# RUST_AWEY

./: README.md
assignment_1/: Cargo.toml  readme.md
assignment_1/src/: main.rs
assignment_2/2a/src/: .main.rs.swp
assignment_2/2b/src/: .main.rs.swp
assignment_2/2d/src/: .main.rs.swp
assignment_2/2e/: Cargo.toml
assignment_2/src/: main.rs
assignment_3/assignment_3a/: Cargo.toml  readme.md
assignment_3/assignment_3a/src/: main.rs
assignment_3/assignment_3b/: .gitignore  Cargo.toml  readme.md
assignment_3/assignment_3b/src/: main.rs
assignment_4/assignment_4a/: Cargo.toml  README.md
assignment_4/assignment_4a/src/: main.rs
assignment_4/assignment_4c/: Cargo.toml  README.md  memory.x
assignment_4/assignment_4c/src/: main.rs
assignment_5/assignment_5a/: .gdbinit  Cargo.toml  README.md
assignment_5/assignment_5a/src/: main.rs
project/: .gdbinit  .gitignore  Cargo.toml  README.md  support_plate.stl
project/src/: _main.rs  characters.rs  main.rs
