[package]
authors = ["William Eriksson"]
categories = ["embedded", "no-std"]
description = "Assignment 3b on microcontroller"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "assignment_4a"
repository = "https://github.com/japaric/cortex-m-quickstart"
version = "0.2.1"

[dependencies]
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[profile.release]
debug = true
lto = true
